completed restaurant model

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
 </head>
 <body>
 
+	<h2> SEAT YOURSELF </h2>
+	<p> <%= link_to "New Restaurant", new_restaurant_path %> </p>
+
 <%= yield %>
 
 </body>
