--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,7 +1,7 @@
 show.html.erb
 <p>
 <%= link_to "Edit Restaurant", edit_restaurant_path(@restaurant) %> || 
-<%= link_to "Delete Restaurant", @restaurant, :confirm => "Are you sure you want to delete this restaurant?", :method => :delete %>
+<%= link_to "Delete Restaurant", @restaurant, :confirm => "Are you sure you want to delete this restaurant?", :method => :delete %> </p>
 
 	<h3> <%= @restaurant.name %> </h3>
 	<ul>
