--- a/app/views/diners/_form.html.erb
+++ b/app/views/diners/_form.html.erb
@@ -1,18 +1,17 @@
-_form.html.erb
 
 <%= form_for @diner do |f| %>
 
-<%= f.label :name %>
-<%= f.text_field :name %>
+<%= f.label :name %> <br>
+<%= f.text_field :name %> <br>
+ 
+<%= f.label :email %> <br>
+<%= f.text_field :email %> <br>
 
-<%= f.label :email %>
-<%= f.text_field :email %>
+<%= f.label :password %> <br>
+<%= f.password_field :password %> <br>
 
-<%= f.label :password %>
-<%= f.password_field :password %>
-
-<%= f.label :password_confirmation %>
-<%= f.password_field :password_confirmation %>
+<%= f.label :password_confirmation %> <br>
+<%= f.password_field :password_confirmation %> <br>
 
 <%= f.submit %>
 
