--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,10 @@
 </head>
 <body>
 
-	<h2> SEAT YOURSELF </h2>
-	<p> <%= link_to "New Restaurant", new_restaurant_path %> </p>
+	<h2><%= link_to "SEAT YOURSELF", root_path %> </h2>
+	<p> <%= link_to "New Restaurant", new_restaurant_path %> ||
+	<%= link_to "New Diner", new_diner_path %> </p>
+
 
 <%= yield %>
 
