--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -1,18 +1,18 @@
-_form.html.erb
+
 
 <%= form_for @restaurant do |f| %>
 
-<%= f.label :name %>
-<%= f.text_field :name %>
+<%= f.label :name %> <br>
+<%= f.text_field :name %> <br>
 
-<%= f.label :address %>
-<%= f.text_field :address %>
+<%= f.label :address %> <br>
+<%= f.text_field :address %> <br>
 
-<%= f.label :description %>
-<%= f.text_area :description %>
+<%= f.label :description %> <br>
+<%= f.text_area :description %> <br>
 
-<%= f.label :seats %>
-<%= f.number_field :seats %>
+<%= f.label :seats %> <br>
+<%= f.number_field :seats %> <br>
 
 <%= f.submit %>
 
