--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,7 +1,3 @@
-show.html.erb
-<p>
-<%= link_to "Edit Restaurant", edit_restaurant_path(@restaurant) %> || 
-<%= link_to "Delete Restaurant", @restaurant, :confirm => "Are you sure you want to delete this restaurant?", :method => :delete %> </p>
 
 	<h3> <%= @restaurant.name %> </h3>
 	<ul>
@@ -9,3 +5,5 @@ show.html.erb
 		<li> <%= @restaurant.description %> </li>
 		<li> Available Seats: <%= @restaurant.seats %> </li>
 	</ul>
+<p><%= link_to "Edit Restaurant", edit_restaurant_path(@restaurant) %> || 
+<%= link_to "Delete Restaurant", @restaurant, :confirm => "Are you sure you want to delete this restaurant?", :method => :delete %> </p>
