--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -5,5 +5,9 @@
 		<li> <%= @restaurant.description %> </li>
 		<li> Available Seats: <%= @restaurant.seats %> </li>
 	</ul>
+
+
+<%= render "reservations/form" %>
+
 <p><%= link_to "Edit Restaurant", edit_restaurant_path(@restaurant) %> || 
 <%= link_to "Delete Restaurant", @restaurant, :confirm => "Are you sure you want to delete this restaurant?", :method => :delete %> </p>
