--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -14,6 +14,13 @@
 <%= f.label :seats %> <br>
 <%= f.number_field :seats %> <br>
 
+<% times_array = [11, 12, 13, 14, 15, 16, 17, 18, 19, 20] %>
+<%= f.label :open_hour %>
+<%= f.select :open_hour, times_array.collect {|t| ["#{t}:00" , t] } %>
+
+<%= f.label :close_hour %>
+<%= f.select :close_hour, times_array.reverse.collect {|t| ["#{t}:00" , t] } %> 
+
 <%= f.submit %>
 
 <% end %>
