--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <% if flash[:notice] %>
+    <p id='notice'><%= flash[:notice] %></p>
+  <%end%>
+  <% if flash[:alert] %>
+    <p id='alert'><%= flash[:alert] %></p>
+  <%end%> 
 
 	<h2><%= link_to "SEAT YOURSELF", root_path %> </h2>
 	<p> <%= link_to "New Restaurant", new_restaurant_path %> ||
