actually got timeslots method to work and now displaying forms with a helping of epicness

--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -6,8 +6,7 @@
 <%= f.number_field :party_size %>
 
 <%= f.label :time %>
-<%= f.datetime_select :time, :discard_year => true %>
-
+<%= f.select :time, @restaurant.timeslots.collect { |slot| [slot.strftime("%A, %b %d, %l:%M %p"), slot]} %>
 
 <%= f.submit %>
 
