--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,4 +1,3 @@
-
 	<h3> <%= @restaurant.name %> </h3>
 	<ul>
 		<li> Address: <%= @restaurant.address %> </li>
@@ -9,5 +8,10 @@
 
 <%= render "reservations/form" %>
 
-<p><%= link_to "Edit Restaurant", edit_restaurant_path(@restaurant) %> || 
-<%= link_to "Delete Restaurant", @restaurant, :confirm => "Are you sure you want to delete this restaurant?", :method => :delete %> </p>
+
+<div class="6 columns push-2">
+	<ul class="button-group">
+<li><%=link_to "Edit Restaurant", edit_restaurant_path(@restaurant), :class => "button secondary" %></li>
+<li><%= link_to "Delete Restaurant", @restaurant, :confirm => "Are you sure you want to delete this restaurant?", :method => :delete, :class => "button secondary" %></li>
+	</ul>
+</div>
