formatted time to go in as UTC and come out as EDT

--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -6,7 +6,7 @@
 <%= f.number_field :party_size %>
 
 <%= f.label :time %>
-<%= f.select :time, @restaurant.timeslots.collect { |slot| [slot.strftime("%A, %b %d, %l:%M %p"), slot]} %>
+<%= f.select :time, @restaurant.timeslots.collect { |slot| [slot.strftime("%A, %b %d, %l:%M %p"), slot.utc]} %>
 
 <%= f.submit %>
 
