styling index page

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,17 +1,30 @@
 <div class="row">
 	<div class="large-12 columns">
 		<!-- Desktop Slider -->
-		<div class="hide-for-small">
-			<div class="orbit-container">
-				<ul id="featured1" data-orbit data-options="pause_on_hover:false; timer_speed:5000;" class="orbit-slides-container" style="height:373px;">
-					<li class="active" style="z-index: 4; margin: 0%;">
-	              		<img src="http://f.cl.ly/items/15323O2S44113i2j063t/bruschetta-italy-halloween-food.jpg">
-		              		<div class="orbit-caption">
-		                		Caption Two. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-		              		</div>
-            		</li>
-			</div>
-		</div>
+		<div class="orbit-container">
+		  <ul data-orbit class="orbit-slides-container">
+		    <li>
+		      <img src="http://f.cl.ly/items/15323O2S44113i2j063t/bruschetta-italy-halloween-food.jpg">
+		      <div class="orbit-caption">Italian Food</div>
+		    </li>
+		    <li class="active">
+		      <img src="http://f.cl.ly/items/0p3C1x0K1L1E001m1D25/chinese.jpg">
+		      <div class="orbit-caption">Chinese Food</div>
+		    </li>
+		    <li>
+		      <img src="http://f.cl.ly/items/1e0V2r1P3I2l3y2O2c3Q/american.jpg">
+		      <div class="orbit-caption">Gourmet Burgers</div>
+		    </li>
+		    <li>
+		      <img src="http://f.cl.ly/items/1D1b3N0y07440N360A15/greek.jpg">
+		      <div class="orbit-caption">Greek</div>
+		    </li>
+		    <li>
+		      <img src="http://f.cl.ly/items/2e1g3R23302o1B383l2I/sushi.jpeg">
+		      <div class="orbit-caption">Sushi</div>
+		    </li>
+		  </ul>
+		</div>	
 
 
 
@@ -27,3 +40,4 @@
 		<% end %>	
 	</div>
 </div>
+
