Adding functional loyalty points feature

--- a/app/views/diners/show.html.erb
+++ b/app/views/diners/show.html.erb
@@ -1,7 +1,8 @@
 
 
 	<h3> <%= @diner.name %> </h3>
-	<h4> Address: <%= @diner.email %> </h4>
+	<h4> Email: <%= @diner.email %> </h4>
+	<h4> Loyalty Points: <%= @diner.loyalty_points %> </h4>
 	<br>
 	<br>
 	<ul> 
